--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-BOT_TOKEN='мы на время убрали токен, т.к это основная часть проекта и он не должен появляться публично'
+BOT_TOKEN=8106791820:AAGi_kok-03kUn5KyTDX-gJRNQEFAlUWyq8
