--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@telegram-apps/sdk": "^2.5.2",
+    "@types/styled-components": "^5.1.34",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
